# cargo-aoc

./: Cargo.toml
aoc/src/: lib.rs
cargo-aoc/: .gitignore  Cargo.toml
cargo-aoc/src/: config.rs  file_gen.rs  input.rs  main.rs  util.rs  web.rs
