[package]
name = "cargo-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo = "0.58.0"
cargo_toml = "0.10.3"
chrono = "0.4.19"
qu = "0.3.1"
quote = "1.0.10"
regex = "1.5.4"
reqwest = { version = "0.11.7", features = ["blocking"] }
rustfmt-wrapper = "0.1.0"
#scraper = "0.12.0"
serde = "1.0.130"
structopt = "0.3.25"
toml = "0.5.8"
